--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,11 +1,85 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+<!--<script
+        src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+        crossorigin="anonymous"></script> -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+<script>
+    $(function() {
+        $("#exampleModal").on("show.bs.modal", function(e) {
+
+        });
+    });
+</script>
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
+
+ <!-- create form for books -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-target=".bd-example-modal-lg">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <form action="#" th:action="@{/api/v1/books}" th:object="${book}" th:method="POST">
+                <div class="form-group col-7">
+                    <label for="bookName" class="col-form-label">Kitap Adi:</label>
+                    <input th:field="*{bookName}" type="text" class="form-control" id="bookName">
+                </div>
+                <div class="form-group col-7">
+                    <label for="subTitle" class="col-form-label">Alt Baslik:</label>
+                    <input th:field="*{bookSubtitle}" type="text" class="form-control" id="subTitle">
+                </div>
+                <div class="form-group col-7">
+                    <label for="seriesName" class="col-form-label">Seri Adi:</label>
+                    <input th:field="*{seriesName}" type="text" class="form-control" id="seriesName">
+                </div>
+                <div class="form-group col-7">
+                    <label for="isbnNumber" class="col-form-label">ISBN:</label>
+                    <input th:field="*{isbnNumber}" type="text" class="form-control" id="isbnNumber">
+                </div>
+                <div class="form-group">
+                    <label for="bookDescription" class="col-form-label">Kitap Aciklamasi:</label>
+                    <input th:field="*{bookDescription}" type="text" class="form-control" id="bookDescription">
+                </div>
+
+                <div class="form-group">
+                    <label for="exampleFormControlSelect1">Yazar sec</label>
+                    <select class="form-control" id="exampleFormControlSelect1" th:field="*{author}">
+                        <option th:each="author : ${authors}" th:value="${author.id}" th:text="${author.authorName}"></option>
+                    </select>
+                </div>
+
+
+                <div class="form-group">
+                    <label for="exampleFormControlSelect2">Yayinci sec</label>
+                    <select class="form-control" id="exampleFormControlSelect2" th:field="*{publisher}">
+                        <option th:each="publisher : ${publishers}" th:value="${publisher.id}" th:text="${publisher.publisherName}"></option>
+                    </select>
+                </div>
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Iptal</button>
+                    <button type="submit" class="btn btn-primary">Ekle</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+ <!-- create form for books -->
+
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,24 +116,40 @@
     <table class="table table-hover">
         <thead>
             <th scope="col">Kitap Adi</th>
-            <th scope="col">Aciklama</th>
+            <th scope="col">Seri Adi</th>
+            <th scope="col">ISBN</th>
+            <th scope="col">Yazar</th>
             <th scope="col">Etkilesimler</th>
         </tr>
         </thead>
         <tbody>
         <tr th:each="book: ${books}">
             <td th:text="${book.bookName}"></td>
-            <td th:text="${book.bookDescription}"></td>
+
+            <td th:text="${book.seriesName}"></td>
+            <td th:text="${book.isbnNumber}"></td>
+            <td th:text="${book.bookOfAuthor}"></td>
+            <td><span sec:authentication="name"></span></td>
+            <td th:text="${userInfo}"></td>
+
             <td>
                 <button type="button" class="btn btn-outline-info">Incele</button>
                 <button type="button" class="btn btn-outline-info">Sil</button>
-                <button type="button" class="btn btn-outline-info">Degistir</button>
+                <button type="button" class="btn btn-outline-info">Duzenle</button>
             </td>
         </tr>
         <tr>
         </tr>
+
         </tbody>
     </table>
-
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+        Kitap Ekle
+    </button>
 </body>
 </html>
+
+<!-- Button trigger modal -->
+
+<!-- Modal -->
+
