--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,35 +4,38 @@
     <meta charset="utf-8">
     <title>Log in with your account</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link href="/css/main.css" rel="stylesheet">
 </head>
 
+<style>
+    .login { border: 2px solid red; }
+</style>
+
 <body>
-<div class="container">
-    <form class="form-signin" method="POST" th:action="@{/login}">
-        <h2 class="form-heading">Log in</h2>
+<div class="login">
+    <div class="container">
+        <form class="form-signin" method="POST" th:action="@{/login}">
+            <h2 class="form-heading">Giris</h2>
 
-        <div class="form-group">
-            <span th:text="${message}"></span>
-            <input name="username" type="text" class="form-control" placeholder="Username"
-                   autofocus="true"/>
+            <div class="form-group">
+                <span th:text="${message}"></span>
+                <input name="username" type="text" class="form-control" placeholder="Username"
+                       autofocus="true"/>
 
-            <input name="password" type="password" class="form-control" placeholder="Password"/>
-            <span class="has-error" th:text="${error}"></span>
+                <input name="password" type="password" class="form-control" placeholder="Password"/>
+                <span class="has-error" th:text="${error}"></span>
 
-            <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
+                <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
 
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Log In</button>
-            <h4 class="text-center"><a href="/registration">Create an account</a></h4>
-        </div>
-        <div class="text-center social-btn">
-            <!--<a href="/oauth2/authorization/facebook" class="btn btn-primary btn-block"><i class="fa fa-facebook"></i> Sign in with <b>Facebook</b></a>-->
-            <a th:href="@{/oauth2/authorization/facebook}"  class="btn btn-primary btn-block"><i class="fa fa-facebook"></i> Sign in with hereaaa <b>Facebook</b></a>
-            <!-- <a href="/oauth2/authorization/google" class="btn btn-info btn-block"><i class="fa fa-google"></i> Sign in with <b>Google</b></a> -->
-        </div>
-    </form>
-
+                <button class="btn btn-lg btn-primary btn-block" type="submit">Giris yap</button>
+                <h4 class="text-center"><a href="/registration">Kayit ol</a></h4>
+            </div>
+            <div class="text-center social-btn">
+                <a th:href="@{/oauth2/authorization/facebook}"  class="btn btn-primary btn-block"><i class="fa fa-facebook"></i><b>Facebook</b> ile giris yap</a>
+            </div>
+        </form>
+    </div>
 </div>
+
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
