--- a/src/main/resources/templates/showBookDetails.html
+++ b/src/main/resources/templates/showBookDetails.html
@@ -5,7 +5,15 @@
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
+<style>
+    .jumbotron {
+        border: 1px solid red;
+        margin: 100px auto;
+        padding-left: 60px;
+        width: 80%;
+        text-align: center;
+    }
+</style>
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -13,10 +21,26 @@
 <body>
 <div class="jumbotron">
     <h1 class="display-4" th:text="${viewedBook.get().bookName}"></h1>
-    <p class="lead" th:text="${viewedBook.get().getAuthor().authorName}"></p>
     <hr class="my-4">
-    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+    <div>
+        <strong>Kitap Adi:</strong> <p th:text="${viewedBook.get.bookSubtitle}"></p>
+    </div>
+    <div>
+        <strong>Seri Adi:</strong>    <p th:text="${viewedBook.get.seriesName}"></p>
+    </div>
+    <div>
+        <strong>Kitap Alt Basligi:</strong> <p th:text="${viewedBook.get.bookSubtitle}"></p>
+    </div>
+    <div>
+        <strong>ISBN Numarasi:</strong> <p th:text="${viewedBook.get.isbnNumber}"></p>
+    </div>
+    <div>
+        <strong>Yazar Adi:</strong> <p class="lead" th:text="${viewedBook.get().getAuthor().authorName}"></p>
+    </div>
+    <div>
+        <strong>Yayinci Adi:</strong> <p class="lead" th:text="${viewedBook.get().getPublisher().publisherName}"></p>
+    </div>
+    <a href="/home" class="btn btn-primary">Ana sayfaya Don</a>
 </div>
 </body>
 </html>
