--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -151,8 +151,9 @@
                     <div class="modal-body">
                         <form action="#" th:action="@{/authors}" th:object="${author}" th:method="POST">
                             <div class="form-group">
-                                <label for="recipient-name" class="col-form-label">Yazar Adi:</label>
-                                <input th:field="*{authorName}" type="text" class="form-control" id="recipient-name">
+                                <label for="authorName" class="col-form-label">Yazar Adi:</label>
+                                <input th:field="*{authorName}" type="text" class="form-control" id="authorName">
+                                <span th:if="${#fields.hasErrors('authorName')}" th:errors="*{authorName}"></span>
                             </div>
                             <div class="form-group">
                                 <label for="message-text" class="col-form-label">Yazar Tanimi:</label>
