--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -23,6 +23,12 @@
             <input type="password" th:field="*{password}" class="form-control" placeholder="Password">
             <span class="has-error" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></span>
         </div>
+
+        <div class="form-group">
+            <input type="password" th:field="*{email}" class="form-control" placeholder="Email">
+            <span class="has-error" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>
+        </div>
+
         <button class="btn btn-lg btn-primary btn-block" type="submit">Submit</button>
     </form>
 
