--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -12,15 +12,15 @@
 <div class="container">
 
     <form method="POST" class="form-signin" th:object="${userForm}" th:action="@{/registration}">
-        <h2 class="form-signin-heading">Create your account</h2>
+        <h2 class="form-signin-heading">Hesap yarat</h2>
         <div class="form-group">
-            <input type="text" th:field="*{username}" class="form-control" placeholder="Username"
+            <input type="text" th:field="*{username}" class="form-control" placeholder="Kullanici adi"
                    autofocus="true">
             <span class="has-error" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></span>
         </div>
 
         <div class="form-group">
-            <input type="password" th:field="*{password}" class="form-control" placeholder="Password">
+            <input type="password" th:field="*{password}" class="form-control" placeholder="Sifre">
             <span class="has-error" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></span>
         </div>
 
@@ -29,7 +29,7 @@
             <span class="has-error" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>
         </div>
 
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Submit</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Kayit ol</button>
     </form>
 
 </div>
